WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
258806
MessageEvent::m_data lock is not held when accessed
https://bugs.webkit.org/show_bug.cgi?id=258806
Summary
MessageEvent::m_data lock is not held when accessed
Kimmo Kinnunen
Reported
2023-07-03 05:21:48 PDT
MessageEvent::m_data lock is not held when accessed
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-07-03 05:22:16 PDT
<
rdar://problem/111681401
>
Kimmo Kinnunen
Comment 2
2023-07-03 05:27:11 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/15500
EWS
Comment 3
2023-07-03 12:41:29 PDT
Committed
265732@main
(7b10b122b14d): <
https://commits.webkit.org/265732@main
> Reviewed commits have been landed. Closing PR #15500 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug