MessageEvent::m_data lock is not held when accessed https://bugs.webkit.org/show_bug.cgi?id=258806 rdar://111681401

Reviewed by Yusuke Suzuki.

The unnamed Locker instance is discarded, releasing the lock.
Fix by naming the instance.
Add declarations to prevent similar bugs.

* Source/WTF/wtf/Locker.h:
(WTF::Locker::Locker): Deleted.
(WTF::Locker::~Locker): Deleted.
(WTF::Locker::tryLock): Deleted.
(WTF::Locker::lockable): Deleted.
(WTF::Locker::operator bool const): Deleted.
(WTF::Locker::unlockEarly): Deleted.
(WTF::Locker::operator=): Deleted.
(WTF::Locker::unlock): Deleted.
(WTF::Locker::lock): Deleted.
* Source/WebCore/dom/MessageEvent.cpp:
(WebCore::MessageEvent::initMessageEvent):
(WebCore::MessageEvent::memoryCost const):
* Source/WebCore/dom/MessageEvent.h:

Canonical link: https://commits.webkit.org/265732@main